# TunaChat

./: CMakeLists.txt  README.md
files/: .conf.txt  conf.txt  help.txt  log.txt  test.txt  title.txt  todo.txt
src/: ChatServer.cpp  ChatServer.h  CliConn.cpp  CliConn.h  ClientConnection.cpp  ClientConnection.h  User.cpp  User.h  main.cpp  tuna.cpp  tuna.h
src/Client/: ChatClient.cpp  ChatClient.h  Command.cpp  Command.h  InputWindow.cpp  InputWindow.h  MessageChannel.cpp  MessageChannel.h  Preferences.cpp  Preferences.h  ServerConn.cpp  ServerConn.h  Terminal.cpp  Terminal.h  Window.cpp  Window.h  tests.cpp  tests.h
src/Client/Terminal/: ColorScheme.cpp  ColorScheme.h  InputWindow.cpp  InputWindow.h  MainWindow.cpp  MainWindow.h  StatusWindow.cpp  StatusWindow.h  Terminal.cpp  Terminal.h  Window.cpp  Window.h  windows.cpp  windows.h
src/Server/: ChatServer.cpp  ChatServer.h  ClientConn.cpp  ClientConn.h  User.cpp  User.h
